--- a/spark/spark_gen_test_data.ipynb
+++ b/spark/spark_gen_test_data.ipynb
@@ -24,12 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#generate row sequence\n",
     "df = spark.range(1,1_000_001).toDF('row_id')\n",
+    "\n",
+    "## the sql version is very slow; the spark.range version is very fast\n",
+    "#df = spark.sql(\"SELECT EXPLODE(SEQUENCE(1, 1000000)) AS row_id\")\n",
     "#generate a list of dates\n",
     "start_dt = \"2001-01-01\"\n",
     "end_dt = \"2024-05-10\"\n",
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,32 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+----------+--------------------+\n",
-      "|row_id|      date|             test_id|\n",
-      "+------+----------+--------------------+\n",
-      "|     1|2001-01-01|e31821d6-819c-4f0...|\n",
-      "|     1|2001-01-02|cd9b626a-5360-40a...|\n",
-      "|     1|2001-01-03|6c924bb9-2e8e-416...|\n",
-      "|     1|2001-01-04|5bd58446-43bf-4d9...|\n",
-      "|     1|2001-01-05|ae865f71-c83a-4fd...|\n",
-      "|     1|2001-01-06|ddc28548-c5fe-49d...|\n",
-      "|     1|2001-01-07|153713a0-ddfc-49c...|\n",
-      "|     1|2001-01-08|ec6ff8dc-d566-464...|\n",
-      "|     1|2001-01-09|297d8cf2-dc3d-4c1...|\n",
-      "|     1|2001-01-10|38e55e0c-a159-404...|\n",
-      "+------+----------+--------------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql = \"\"\"\n",
     "select n.row_id, d.date, uuid() as test_id\n",
