--- a/spark/tutorial_v2.ipynb
+++ b/spark/tutorial_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,12 @@
     "\n",
     "## create the spark connection/instance\n",
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName(\"test\") \\\n",
-    "    .config(\"spark.sql.warehouse.dir\", \"./test_dw\") \\\n",
-    "    .getOrCreate()"
+    "spark = SparkSession.builder.appName(\"test\").getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,18 +35,26 @@
     "\n",
     "df = spark.createDataFrame(data)\n",
     "\n",
-    "df.write.parquet('./dummy_data.parquet')"
+    "df.write.mode('overwrite').parquet('./dummy_data/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1001\n"
+     ]
+    }
+   ],
    "source": [
     "#task: Combine first and last name to one field and combine the address to one field separated by a dash\n",
     "\n",
-    "df1 = spark.read.parquet('./dummy_data.parquet')\n",
+    "df1 = spark.read.parquet('./dummy_data')\n",
     "df1.createOrReplaceTempView('people')\n"
    ]
   },
@@ -70,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dft.write.parquet('./people_tsfm.parquet')"
+    "dft.write.mode('overwrite').parquet('./people_tsfm/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
