--- a/spark/tutorial_v2.ipynb
+++ b/spark/tutorial_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#task: Combine first and last name to one field and combine the address to one field separated by a dash\n",
     "\n",
@@ -60,23 +52,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import functions as F\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using dataframe syntax to transform\n",
+    "dft = df1.select(\n",
+    "    F.concat(F.col(\"first_name\"), F.lit(' '), F.col(\"last_name\")).alias(\"full_name\"),\n",
+    "    F.concat(F.col(\"street_adrs\"), F.lit('-'), F.col(\"zip_cd\"), F.lit('-'), F.col(\"state_abrv\")).alias(\"full_adrs\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## transform and write out\n",
+    "#using sql\n",
     "sql = \"\"\"\n",
     "    select concat(first_name, ' ',last_name) as full_name\n",
     "        ,concat(street_adrs,'-',zip_cd,'-',state_abrv) as full_adrs\n",
     "    from people\n",
     "\"\"\"\n",
     "dft = spark.sql(sql)\n",
-    "dft.show(5)"
+    "dft.show(5, truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
