--- a/spark/udf.ipynb
+++ b/spark/udf.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/02/07 07:19:15 WARN Utils: Your hostname, MattMBP.local resolves to a loopback address: 127.0.0.1; using 172.20.3.16 instead (on interface en0)\n",
+      "24/02/07 07:19:15 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/02/07 07:19:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Author: Matt Martin\n",
@@ -34,25 +46,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@udf(returnType=IntegerType())\n",
+    "def add_some_stuff(x, y) -> int:\n",
+    "    return x+y\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyspark.sql.udf.UserDefinedFunction at 0x106691ca0>"
+       "<pyspark.sql.udf.UserDefinedFunction at 0x1133d41d0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "@udf(returnType=IntegerType())\n",
-    "def add_some_stuff(x, y) -> int:\n",
-    "    return x+y\n",
-    "\n",
     "spark.udf.register('udf_add_some_stuff',add_some_stuff)"
    ]
   },
@@ -69,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
