--- a/spark/nesting.ipynb
+++ b/spark/nesting.ipynb
@@ -9,7 +9,7 @@
     "\"\"\"\n",
     "Author: Matt Martin\n",
     "Date: 2/26/24\n",
-    "Desc: Demonstrates how to nest data in spark\n",
+    "Desc: Demonstrates how to nest rows in the same table in spark using array_agg/struct\n",
     "\"\"\""
    ]
   },
@@ -29,8 +29,6 @@
     "    .config(\"spark.driver.memory\", \"2g\") \\\n",
     "    .config(\"spark.executor.memory\", \"8g\") \\\n",
     "    .config(\"spark.executor.instances\", 10) \\\n",
-    "    .config(\"spark.jars.packages\", \"io.dataflint:spark_2.12:0.1.4\") \\\n",
-    "    .config(\"spark.plugins\", \"io.dataflint.spark.SparkDataflintPlugin\") \\\n",
     "    .getOrCreate()"
    ]
   },
@@ -40,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#1: generate some data\n",
     "data = [\n",
     "    {'dept_id':1,'name':'Bill','title':'manager'},\n",
     "    {'dept_id':1,'name':'Fred','title':'Director'},\n",
@@ -55,6 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#2: Nest the groupable columns together\n",
     "sql = \"\"\"\n",
     "select dept_id\n",
     "    , array_agg(struct(name, title)) as emp_dtl\n",
@@ -95,6 +95,7 @@
     }
    ],
    "source": [
+    "#3: using the \"lateral view explode\", unnest the data so it shows all in the same row as the header info\n",
     "sql = \"\"\"\n",
     "select\n",
     "    hdr.dept_id\n",
