--- a/polars/polars_data_gen.ipynb
+++ b/polars/polars_data_gen.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import polars as pl\n",
     "from mimesis import Person, Address, Numeric\n",
-    "import xlsxwriter"
+    "import xlsxwriter\n",
+    "import duckdb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,24 +59,24 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 5)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>name</th><th>address</th><th>zip_cd</th><th>state</th><th>net_worth</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td></tr></thead><tbody><tr><td>&quot;Dominque Sloan…</td><td>&quot;962 Auto Cross…</td><td>&quot;87605&quot;</td><td>&quot;Pennsylvania&quot;</td><td>46978</td></tr><tr><td>&quot;Glennie Ruiz&quot;</td><td>&quot;467 Minnesota …</td><td>&quot;50005&quot;</td><td>&quot;Virginia&quot;</td><td>24189</td></tr><tr><td>&quot;Theo Reese&quot;</td><td>&quot;896 Alhambra H…</td><td>&quot;36359&quot;</td><td>&quot;Hawaii&quot;</td><td>13333</td></tr><tr><td>&quot;Rogelio Conner…</td><td>&quot;233 Rio Ranch&quot;</td><td>&quot;79718&quot;</td><td>&quot;New Hampshire&quot;</td><td>49943</td></tr><tr><td>&quot;Kenia Mueller&quot;</td><td>&quot;779 Valdez Str…</td><td>&quot;56450&quot;</td><td>&quot;Hawaii&quot;</td><td>23592</td></tr></tbody></table></div>"
+       "<small>shape: (5, 5)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>name</th><th>address</th><th>zip_cd</th><th>state</th><th>net_worth</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td></tr></thead><tbody><tr><td>&quot;Lynna Vang&quot;</td><td>&quot;1054 Miller Ce…</td><td>&quot;84769&quot;</td><td>&quot;Tennessee&quot;</td><td>26274</td></tr><tr><td>&quot;Moriah Harmon&quot;</td><td>&quot;1318 Jeopardy …</td><td>&quot;68278&quot;</td><td>&quot;Pennsylvania&quot;</td><td>36192</td></tr><tr><td>&quot;Kortney Burns&quot;</td><td>&quot;999 Saint Loui…</td><td>&quot;99648&quot;</td><td>&quot;Ohio&quot;</td><td>47950</td></tr><tr><td>&quot;Minna Fulton&quot;</td><td>&quot;477 Marvel Est…</td><td>&quot;65209&quot;</td><td>&quot;Texas&quot;</td><td>16183</td></tr><tr><td>&quot;Bobette Gallag…</td><td>&quot;86 Dunsmuir Ru…</td><td>&quot;31921&quot;</td><td>&quot;North Carolina…</td><td>12086</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 5)\n",
-       "┌────────────────┬───────────────────────┬────────┬───────────────┬───────────┐\n",
-       "│ name           ┆ address               ┆ zip_cd ┆ state         ┆ net_worth │\n",
-       "│ ---            ┆ ---                   ┆ ---    ┆ ---           ┆ ---       │\n",
-       "│ str            ┆ str                   ┆ str    ┆ str           ┆ i64       │\n",
-       "╞════════════════╪═══════════════════════╪════════╪═══════════════╪═══════════╡\n",
-       "│ Dominque Sloan ┆ 962 Auto Crossing     ┆ 87605  ┆ Pennsylvania  ┆ 46978     │\n",
-       "│ Glennie Ruiz   ┆ 467 Minnesota Heights ┆ 50005  ┆ Virginia      ┆ 24189     │\n",
-       "│ Theo Reese     ┆ 896 Alhambra Hills    ┆ 36359  ┆ Hawaii        ┆ 13333     │\n",
-       "│ Rogelio Conner ┆ 233 Rio Ranch         ┆ 79718  ┆ New Hampshire ┆ 49943     │\n",
-       "│ Kenia Mueller  ┆ 779 Valdez Street     ┆ 56450  ┆ Hawaii        ┆ 23592     │\n",
-       "└────────────────┴───────────────────────┴────────┴───────────────┴───────────┘"
+       "┌───────────────────┬──────────────────────┬────────┬────────────────┬───────────┐\n",
+       "│ name              ┆ address              ┆ zip_cd ┆ state          ┆ net_worth │\n",
+       "│ ---               ┆ ---                  ┆ ---    ┆ ---            ┆ ---       │\n",
+       "│ str               ┆ str                  ┆ str    ┆ str            ┆ i64       │\n",
+       "╞═══════════════════╪══════════════════════╪════════╪════════════════╪═══════════╡\n",
+       "│ Lynna Vang        ┆ 1054 Miller Center   ┆ 84769  ┆ Tennessee      ┆ 26274     │\n",
+       "│ Moriah Harmon     ┆ 1318 Jeopardy Creek  ┆ 68278  ┆ Pennsylvania   ┆ 36192     │\n",
+       "│ Kortney Burns     ┆ 999 Saint Louis Mews ┆ 99648  ┆ Ohio           ┆ 47950     │\n",
+       "│ Minna Fulton      ┆ 477 Marvel Estate    ┆ 65209  ┆ Texas          ┆ 16183     │\n",
+       "│ Bobette Gallagher ┆ 86 Dunsmuir Run      ┆ 31921  ┆ North Carolina ┆ 12086     │\n",
+       "└───────────────────┴──────────────────────┴────────┴────────────────┴───────────┘"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,6 +142,61 @@
    "source": [
     "res.write_parquet(\"./agg_pl.parquet\")\n",
     "res.write_excel(\"./test.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌─────────┬──────────┬────────┬───────────────┐\n",
+      "│ zip_cd  │ adrs_cnt │ nm_cnt │ net_worth_tot │\n",
+      "│ varchar │  int64   │ int64  │    int128     │\n",
+      "├─────────┼──────────┼────────┼───────────────┤\n",
+      "│ 30464   │        1 │      1 │         49028 │\n",
+      "│ 70790   │        2 │      2 │         93377 │\n",
+      "│ 61547   │        3 │      3 │         63119 │\n",
+      "│ 77274   │        1 │      1 │         14577 │\n",
+      "│ 41876   │        2 │      2 │         49842 │\n",
+      "│ 87568   │        1 │      1 │          7825 │\n",
+      "│ 35258   │        2 │      2 │         72500 │\n",
+      "│ 47701   │        1 │      1 │         23175 │\n",
+      "│ 31944   │        2 │      2 │         38813 │\n",
+      "│ 38623   │        1 │      1 │          8832 │\n",
+      "│   ·     │        · │      · │            ·  │\n",
+      "│   ·     │        · │      · │            ·  │\n",
+      "│   ·     │        · │      · │            ·  │\n",
+      "│ 46924   │        1 │      1 │         31305 │\n",
+      "│ 69980   │        1 │      1 │          7908 │\n",
+      "│ 56105   │        1 │      1 │         47937 │\n",
+      "│ 52511   │        1 │      1 │         49199 │\n",
+      "│ 61094   │        1 │      1 │         24056 │\n",
+      "│ 64540   │        1 │      1 │         29795 │\n",
+      "│ 99958   │        1 │      1 │         46240 │\n",
+      "│ 05180   │        1 │      1 │         47504 │\n",
+      "│ 49124   │        1 │      1 │         45961 │\n",
+      "│ 23478   │        1 │      1 │          5846 │\n",
+      "├─────────┴──────────┴────────┴───────────────┤\n",
+      "│ ? rows (>9999 rows, 20 shown)     4 columns │\n",
+      "└─────────────────────────────────────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "    select zip_cd, count(distinct address) as adrs_cnt\n",
+    "        ,count(distinct name) as nm_cnt\n",
+    "        ,sum(net_worth) as net_worth_tot\n",
+    "    from df\n",
+    "    group by 1\n",
+    "\"\"\"\n",
+    "\n",
+    "duckdb.sql(sql).show()"
    ]
   }
  ],
