--- a/polars/polars_data_gen.ipynb
+++ b/polars/polars_data_gen.ipynb
@@ -9,7 +9,8 @@
     "import polars as pl\n",
     "from mimesis import Person, Address, Numeric\n",
     "import xlsxwriter\n",
-    "import duckdb"
+    "import duckdb\n",
+    "import pyarrow"
    ]
   },
   {
