--- a/polars/polars_data_gen.ipynb
+++ b/polars/polars_data_gen.ipynb
@@ -88,30 +88,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (63_168, 4)\n",
+      "shape: (63_091, 4)\n",
       "┌────────┬──────────┬─────────────┬───────────────┐\n",
       "│ zip_cd ┆ name_cnt ┆ address_cnt ┆ net_worth_tot │\n",
       "│ ---    ┆ ---      ┆ ---         ┆ ---           │\n",
       "│ str    ┆ u32      ┆ u32         ┆ i64           │\n",
       "╞════════╪══════════╪═════════════╪═══════════════╡\n",
-      "│ 95887  ┆ 4        ┆ 4           ┆ 79981         │\n",
-      "│ 78005  ┆ 1        ┆ 1           ┆ 13615         │\n",
-      "│ 88794  ┆ 1        ┆ 1           ┆ 49062         │\n",
-      "│ 40225  ┆ 1        ┆ 1           ┆ 31707         │\n",
-      "│ 06088  ┆ 1        ┆ 1           ┆ 5785          │\n",
+      "│ 64934  ┆ 1        ┆ 1           ┆ 37000         │\n",
+      "│ 82576  ┆ 1        ┆ 1           ┆ 35236         │\n",
+      "│ 05687  ┆ 1        ┆ 1           ┆ 28699         │\n",
+      "│ 80119  ┆ 2        ┆ 2           ┆ 44029         │\n",
+      "│ 30331  ┆ 2        ┆ 2           ┆ 83101         │\n",
       "│ …      ┆ …        ┆ …           ┆ …             │\n",
-      "│ 90521  ┆ 2        ┆ 2           ┆ 74368         │\n",
-      "│ 46583  ┆ 1        ┆ 1           ┆ 47269         │\n",
-      "│ 19442  ┆ 1        ┆ 1           ┆ 48631         │\n",
-      "│ 32625  ┆ 2        ┆ 2           ┆ 72147         │\n",
-      "│ 71798  ┆ 2        ┆ 2           ┆ 51017         │\n",
+      "│ 36826  ┆ 2        ┆ 2           ┆ 78335         │\n",
+      "│ 61734  ┆ 2        ┆ 2           ┆ 20762         │\n",
+      "│ 17027  ┆ 1        ┆ 1           ┆ 29030         │\n",
+      "│ 64088  ┆ 1        ┆ 1           ┆ 6443          │\n",
+      "│ 77732  ┆ 1        ┆ 1           ┆ 11726         │\n",
       "└────────┴──────────┴─────────────┴───────────────┘\n"
      ]
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -158,32 +158,12 @@
       "│ zip_cd  │ adrs_cnt │ nm_cnt │ net_worth_tot │\n",
       "│ varchar │  int64   │ int64  │    int128     │\n",
       "├─────────┼──────────┼────────┼───────────────┤\n",
-      "│ 30464   │        1 │      1 │         49028 │\n",
-      "│ 70790   │        2 │      2 │         93377 │\n",
-      "│ 61547   │        3 │      3 │         63119 │\n",
-      "│ 77274   │        1 │      1 │         14577 │\n",
-      "│ 41876   │        2 │      2 │         49842 │\n",
-      "│ 87568   │        1 │      1 │          7825 │\n",
-      "│ 35258   │        2 │      2 │         72500 │\n",
-      "│ 47701   │        1 │      1 │         23175 │\n",
-      "│ 31944   │        2 │      2 │         38813 │\n",
-      "│ 38623   │        1 │      1 │          8832 │\n",
-      "│   ·     │        · │      · │            ·  │\n",
-      "│   ·     │        · │      · │            ·  │\n",
-      "│   ·     │        · │      · │            ·  │\n",
-      "│ 46924   │        1 │      1 │         31305 │\n",
-      "│ 69980   │        1 │      1 │          7908 │\n",
-      "│ 56105   │        1 │      1 │         47937 │\n",
-      "│ 52511   │        1 │      1 │         49199 │\n",
-      "│ 61094   │        1 │      1 │         24056 │\n",
-      "│ 64540   │        1 │      1 │         29795 │\n",
-      "│ 99958   │        1 │      1 │         46240 │\n",
-      "│ 05180   │        1 │      1 │         47504 │\n",
-      "│ 49124   │        1 │      1 │         45961 │\n",
-      "│ 23478   │        1 │      1 │          5846 │\n",
-      "├─────────┴──────────┴────────┴───────────────┤\n",
-      "│ ? rows (>9999 rows, 20 shown)     4 columns │\n",
-      "└─────────────────────────────────────────────┘\n",
+      "│ 00000   │        4 │      4 │         84284 │\n",
+      "│ 00001   │        1 │      1 │          7395 │\n",
+      "│ 00002   │        1 │      1 │          7472 │\n",
+      "│ 00004   │        1 │      1 │         41685 │\n",
+      "│ 00005   │        2 │      2 │         65217 │\n",
+      "└─────────┴──────────┴────────┴───────────────┘\n",
       "\n"
      ]
     }
@@ -195,9 +175,38 @@
     "        ,sum(net_worth) as net_worth_tot\n",
     "    from df\n",
     "    group by 1\n",
+    "    order by 1\n",
+    "    limit 5\n",
     "\"\"\"\n",
     "\n",
     "duckdb.sql(sql).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌─────────┬──────────┬─────────────┬───────────────┐\n",
+      "│ zip_cd  │ name_cnt │ address_cnt │ net_worth_tot │\n",
+      "│ varchar │  uint32  │   uint32    │     int64     │\n",
+      "├─────────┼──────────┼─────────────┼───────────────┤\n",
+      "│ 00000   │        4 │           4 │         84284 │\n",
+      "│ 00001   │        1 │           1 │          7395 │\n",
+      "│ 00002   │        1 │           1 │          7472 │\n",
+      "│ 00004   │        1 │           1 │         41685 │\n",
+      "│ 00005   │        2 │           2 │         65217 │\n",
+      "└─────────┴──────────┴─────────────┴───────────────┘\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "duckdb.sql('select * from res order by 1 limit 5').show()"
    ]
   }
  ],
