--- a/polars/polars_data_gen.ipynb
+++ b/polars/polars_data_gen.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "import polars as pl\n",
     "from mimesis import Person, Address, Numeric\n",
-    "import xlsxwriter\n",
-    "import duckdb\n",
-    "import pyarrow"
+    "import xlsxwriter"
    ]
   },
   {
@@ -143,70 +141,6 @@
    "source": [
     "res.write_parquet(\"./agg_pl.parquet\")\n",
     "res.write_excel(\"./test.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "┌─────────┬──────────┬────────┬───────────────┐\n",
-      "│ zip_cd  │ adrs_cnt │ nm_cnt │ net_worth_tot │\n",
-      "│ varchar │  int64   │ int64  │    int128     │\n",
-      "├─────────┼──────────┼────────┼───────────────┤\n",
-      "│ 00000   │        4 │      4 │         84284 │\n",
-      "│ 00001   │        1 │      1 │          7395 │\n",
-      "│ 00002   │        1 │      1 │          7472 │\n",
-      "│ 00004   │        1 │      1 │         41685 │\n",
-      "│ 00005   │        2 │      2 │         65217 │\n",
-      "└─────────┴──────────┴────────┴───────────────┘\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "sql = \"\"\"\n",
-    "    select zip_cd, count(distinct address) as adrs_cnt\n",
-    "        ,count(distinct name) as nm_cnt\n",
-    "        ,sum(net_worth) as net_worth_tot\n",
-    "    from df\n",
-    "    group by 1\n",
-    "    order by 1\n",
-    "    limit 5\n",
-    "\"\"\"\n",
-    "\n",
-    "duckdb.sql(sql).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "┌─────────┬──────────┬─────────────┬───────────────┐\n",
-      "│ zip_cd  │ name_cnt │ address_cnt │ net_worth_tot │\n",
-      "│ varchar │  uint32  │   uint32    │     int64     │\n",
-      "├─────────┼──────────┼─────────────┼───────────────┤\n",
-      "│ 00000   │        4 │           4 │         84284 │\n",
-      "│ 00001   │        1 │           1 │          7395 │\n",
-      "│ 00002   │        1 │           1 │          7472 │\n",
-      "│ 00004   │        1 │           1 │         41685 │\n",
-      "│ 00005   │        2 │           2 │         65217 │\n",
-      "└─────────┴──────────┴─────────────┴───────────────┘\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "duckdb.sql('select * from res order by 1 limit 5').show()"
    ]
   }
  ],
