--- a/polars/polars_data_gen with duckdb.ipynb
+++ b/polars/polars_data_gen with duckdb.ipynb
@@ -79,6 +79,39 @@
     "\"\"\"\n",
     "duckdb.sql(sql).show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (5, 4)\n",
+      "┌────────┬──────────┬─────────────┬───────────────┐\n",
+      "│ zip_cd ┆ name_cnt ┆ address_cnt ┆ net_worth_tot │\n",
+      "│ ---    ┆ ---      ┆ ---         ┆ ---           │\n",
+      "│ str    ┆ u32      ┆ u32         ┆ i64           │\n",
+      "╞════════╪══════════╪═════════════╪═══════════════╡\n",
+      "│ 00001  ┆ 2        ┆ 2           ┆ 59113         │\n",
+      "│ 00004  ┆ 1        ┆ 1           ┆ 10175         │\n",
+      "│ 00005  ┆ 2        ┆ 2           ┆ 33547         │\n",
+      "│ 00006  ┆ 2        ┆ 2           ┆ 46552         │\n",
+      "│ 00008  ┆ 1        ┆ 1           ┆ 26245         │\n",
+      "└────────┴──────────┴─────────────┴───────────────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "#achive the same thing with polars syntax\n",
+    "res = df.group_by(pl.col('zip_cd')).agg(pl.col('name').n_unique().name.suffix(\"_cnt\")\n",
+    "                                        ,pl.col('address').n_unique().name.suffix(\"_cnt\")\n",
+    "                                        ,pl.col('net_worth').sum().name.suffix(\"_tot\")\n",
+    "                            ).sort(\"zip_cd\").limit(5)\n",
+    "print(res)\n"
+   ]
   }
  ],
  "metadata": {
