--- a/polars/polars_data_gen with duckdb.ipynb
+++ b/polars/polars_data_gen with duckdb.ipynb
@@ -46,32 +46,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌─────────┬────────┬──────────┬───────────────┐\n",
-      "│ zip_cd  │ nm_cnt │ adrs_cnt │ tot_net_worth │\n",
-      "│ varchar │ int64  │  int64   │    int128     │\n",
-      "├─────────┼────────┼──────────┼───────────────┤\n",
-      "│ 00001   │      2 │        2 │         59113 │\n",
-      "│ 00004   │      1 │        1 │         10175 │\n",
-      "│ 00005   │      2 │        2 │         33547 │\n",
-      "│ 00006   │      2 │        2 │         46552 │\n",
-      "│ 00008   │      1 │        1 │         26245 │\n",
-      "└─────────┴────────┴──────────┴───────────────┘\n",
+      "┌─────────┬──────────┬─────────────┬───────────────┐\n",
+      "│ zip_cd  │ name_cnt │ address_cnt │ net_worth_tot │\n",
+      "│ varchar │  int64   │    int64    │    int128     │\n",
+      "├─────────┼──────────┼─────────────┼───────────────┤\n",
+      "│ 00001   │        2 │           2 │         59113 │\n",
+      "│ 00004   │        1 │           1 │         10175 │\n",
+      "│ 00005   │        2 │           2 │         33547 │\n",
+      "│ 00006   │        2 │           2 │         46552 │\n",
+      "│ 00008   │        1 │           1 │         26245 │\n",
+      "└─────────┴──────────┴─────────────┴───────────────┘\n",
       "\n"
      ]
     }
    ],
    "source": [
     "sql = \"\"\"\n",
-    "    select zip_cd, count(distinct name) as nm_cnt\n",
-    "        ,count(distinct address) as adrs_cnt\n",
-    "        ,sum(net_worth) as tot_net_worth\n",
+    "    select zip_cd, count(distinct name) as name_cnt\n",
+    "        ,count(distinct address) as address_cnt\n",
+    "        ,sum(net_worth) as net_worth_tot\n",
     "    from df\n",
     "    group by all\n",
     "    order by 1\n",
