--- a/polars/p_test_harness.ipynb
+++ b/polars/p_test_harness.ipynb
@@ -41,7 +41,15 @@
     "\n",
     "df = pl.DataFrame(data)\n",
     "#df.head(5)\n",
-    "df.write_parquet('~/test.parquet')\n"
+    "df.write_parquet('~/test.parquet')\n",
+    "\n",
+    "\"\"\"\n",
+    "    To do: \n",
+    "        multi-thread 10 10M csv files out; \n",
+    "        have polars read all the files in and aggregate\n",
+    "        have polars add a timestamp column\n",
+    "        have polars write to parquet\n",
+    "\"\"\"\n"
    ]
   }
  ],
