--- a/polars/p_test_harness.ipynb
+++ b/polars/p_test_harness.ipynb
@@ -23,9 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    To do: \\n        multi-thread 10 10M csv files out; \\n        have polars read all the files in and aggregate\\n        have polars add a timestamp column\\n        have polars write to parquet\\n'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "peep = Person()\n",
     "adrs = Address()\n",
@@ -40,6 +51,9 @@
     "\n",
     "\n",
     "df = pl.DataFrame(data)\n",
+    "\n",
+    "\n",
+    "\n",
     "#df.head(5)\n",
     "df.write_parquet('~/test.parquet')\n",
     "\n",
@@ -50,6 +64,22 @@
     "        have polars add a timestamp column\n",
     "        have polars write to parquet\n",
     "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df.group_by(\"zip_cd\").agg(\n",
+    "     pl.col(\"net_worth\").sum().name.suffix(\"_tot\")\n",
+    "    ,pl.col(\"first_name\").n_unique().name.suffix(\"_cnt\")\n",
+    "    ,pl.col(\"city\").count().alias(\"city_cnt\")\n",
+    ")\n",
+    "\n",
+    "df2.head(5)\n",
+    "df2.write_csv(file=\"~/test.csv\",include_header=True, separator=\"|\")"
    ]
   }
  ],
