--- a/polars/p_test_harness.ipynb
+++ b/polars/p_test_harness.ipynb
@@ -12,13 +12,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time \n",
     "from mimesis import Person, Address, Numeric\n",
     "import polars as pl\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#write out datasets\n",
+    "def generate_datasets(batch_nbr: int) -> None:\n",
+    "    peep = Person()\n",
+    "    adrs = Address()\n",
+    "    num = Numeric()\n",
+    "\n",
+    "    data = []\n",
+    "    for _ in range(1_000_000):\n",
+    "        data.append({'first_name':peep.first_name(), 'last_name':peep.last_name()\n",
+    "                    , 'address_txt':adrs.address(), 'zip_cd':adrs.zip_code()\n",
+    "                    , 'city':adrs.city(), 'state':adrs.state()\n",
+    "                    , 'net_worth': num.integer_number(0,50000)})\n",
+    "        \n",
+    "    pl.DataFrame(data).write_csv(f'~/test_dummy_data/polars/data{batch_nbr}.csv')\n",
+    "    \n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_datasets_parallel(num_batches: int, max_workers: int) -> None:\n",
+    "    with ThreadPoolExecutor(max_workers=max_workers) as executor:\n",
+    "        executor.map(generate_datasets, range(num_batches))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time() \n",
+    "generate_datasets_parallel(10, 3)\n",
+    "end_time = time.time()  # Record the end time\n",
+    "total_time = end_time - start_time  # Calculate the total time taken\n",
+    "print(f\"Total time taken: {total_time} seconds\")"
    ]
   },
   {
@@ -26,33 +76,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000000\n"
+     ]
+    }
+   ],
    "source": [
-    "peep = Person()\n",
-    "adrs = Address()\n",
-    "num = Numeric()\n",
     "\n",
-    "data = []\n",
-    "for _ in range(1_000_000):\n",
-    "    data.append({'first_name':peep.first_name(), 'last_name':peep.last_name()\n",
-    "                 , 'address_txt':adrs.address(), 'zip_cd':adrs.zip_code()\n",
-    "                 , 'city':adrs.city(), 'state':adrs.state()\n",
-    "                 , 'net_worth': num.integer_number(0,50000)})\n",
+    "df = pl.read_csv('~/test_dummy_data/polars/data*.csv')\n",
     "\n",
     "\n",
-    "df = pl.DataFrame(data)\n",
-    "\n",
-    "\n",
-    "\n",
-    "#df.head(5)\n",
-    "df.write_parquet('~/test.parquet')\n",
-    "\n",
-    "\"\"\"\n",
-    "    To do: \n",
-    "        multi-thread 10 10M csv files out; \n",
-    "        have polars read all the files in and aggregate\n",
-    "        have polars add a timestamp column\n",
-    "        have polars write to parquet\n",
-    "\"\"\"\n"
+    "## TODO: Aggregate data up, add timestamp column, write to parquet\n"
    ]
   },
   {
