--- a/polars/polars_volume_test.ipynb
+++ b/polars/polars_volume_test.ipynb
@@ -12,44 +12,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time \n",
+    "import os\n",
     "from mimesis import Person, Address, Numeric\n",
     "import polars as pl\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
+    "import csv\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#write out datasets\n",
+    "ROW_CNT: int = 10_000_000\n",
+    "BATCH_SIZE: int = 10000\n",
+    "\n",
     "def generate_datasets(batch_nbr: int) -> None:\n",
     "    peep = Person()\n",
     "    adrs = Address()\n",
     "    num = Numeric()\n",
     "\n",
-    "    data = []\n",
-    "    for _ in range(1_000_000):\n",
-    "        data.append({'first_name':peep.first_name(), 'last_name':peep.last_name()\n",
-    "                    , 'address_txt':adrs.address(), 'zip_cd':adrs.zip_code()\n",
-    "                    , 'city':adrs.city(), 'state':adrs.state()\n",
-    "                    , 'net_worth': num.integer_number(0,50000)})\n",
-    "        \n",
-    "    pl.DataFrame(data).write_csv(f'~/test_dummy_data/polars/data{batch_nbr}.csv')\n",
-    "    \n",
-    "    return"
+    "    f_path = os.path.expanduser(f'~/test_dummy_data/polars2/data{batch_nbr}.csv')\n",
+    "    with open(f_path, 'w', newline='') as csvfile:\n",
+    "        fieldnames = ['first_name', 'last_name', 'address_txt', 'zip_cd', 'city', 'state', 'net_worth']\n",
+    "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
+    "\n",
+    "        writer.writeheader()\n",
+    "        for _ in range(ROW_CNT // BATCH_SIZE):\n",
+    "            rows = []\n",
+    "            for _ in range(BATCH_SIZE):\n",
+    "                rows.append({\n",
+    "                    'first_name': peep.first_name(),\n",
+    "                    'last_name': peep.last_name(),\n",
+    "                    'address_txt': adrs.address(),\n",
+    "                    'zip_cd': adrs.zip_code(),\n",
+    "                    'city': adrs.city(),\n",
+    "                    'state': adrs.state(),\n",
+    "                    'net_worth': num.integer_number(0, 50000)\n",
+    "                })\n",
+    "            writer.writerows(rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,12 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "start_time = time.time() \n",
-    "generate_datasets_parallel(10, 3)\n",
+    "generate_datasets_parallel(10, 5)\n",
     "end_time = time.time()  # Record the end time\n",
     "total_time = end_time - start_time  # Calculate the total time taken\n",
     "print(f\"Total time taken: {total_time} seconds\")"
@@ -95,6 +109,10 @@
     "\n",
     "df = pl.read_csv('~/test_dummy_data/polars/data*.csv')\n",
     "\n",
+    "\"\"\"\n",
+    "    Update: Used the go fd fake data generator to generate 100M rows; it did it in about 5 minutes\n",
+    "    -- add a link for that to this test harness\n",
+    "\"\"\"\n",
     "\n",
     "## TODO: Aggregate data up, add timestamp column, write to parquet\n"
    ]
