--- a/polars/polars_volume_test.ipynb
+++ b/polars/polars_volume_test.ipynb
@@ -110,7 +110,10 @@
     "df = pl.read_csv('~/test_dummy_data/polars/data*.csv')\n",
     "\n",
     "\"\"\"\n",
-    "    Update: Used the go fd fake data generator to generate 100M rows; it did it in about 5 minutes\n",
+    "    Update: Used the go fd fake data generator to generate 100M rows; it did it in about 5 minutes.\n",
+    "        it generated 14 gb of data; this is the command i used:\n",
+    "            ./fd create --filetype csv --maxworkers 6 --prefix fin_data_ --outputdir ~/test_dummy_data/polars --files 30 --rows 100000000\n",
+    "\n",
     "    -- add a link for that to this test harness\n",
     "\"\"\"\n",
     "\n",
