--- a/polars/polars_volume_test.ipynb
+++ b/polars/polars_volume_test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#write out datasets\n",
-    "ROW_CNT: int = 10_000_000\n",
-    "BATCH_SIZE: int = 10000\n",
+    "ROW_CNT: int = 1_000_000\n",
+    "BATCH_SIZE: int = 1_0000\n",
     "\n",
     "def generate_datasets(batch_nbr: int) -> None:\n",
     "    peep = Person()\n",
@@ -50,20 +50,20 @@
     "            rows = []\n",
     "            for _ in range(BATCH_SIZE):\n",
     "                rows.append({\n",
-    "                    'first_name': peep.first_name(),\n",
-    "                    'last_name': peep.last_name(),\n",
-    "                    'address_txt': adrs.address(),\n",
-    "                    'zip_cd': adrs.zip_code(),\n",
-    "                    'city': adrs.city(),\n",
-    "                    'state': adrs.state(),\n",
-    "                    'net_worth': num.integer_number(0, 50000)\n",
+    "                    peep.first_name(), ',',\n",
+    "                    peep.last_name(),',',\n",
+    "                    adrs.address(),',',\n",
+    "                    adrs.zip_code(),',',\n",
+    "                    adrs.city(),',',\n",
+    "                    adrs.state(),',',\n",
+    "                    num.integer_number(0, 50000)\n",
     "                })\n",
     "            writer.writerows(rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,9 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total time taken: 0.6840400695800781 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = time.time() \n",
     "generate_datasets_parallel(10, 5)\n",
