--- a/python/misc/sorting.ipynb
+++ b/python/misc/sorting.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 7]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 7]\n",
+      "['apple', 'banana', 'kiwi', 'mango', 'orange', 'peach', 'pear']\n"
+     ]
     }
    ],
    "source": [
@@ -25,12 +23,15 @@
     "            if arr[j] > arr[j+1]:\n",
     "                #swap them\n",
     "                arr[j+1], arr[j] = arr[j], arr[j+1]\n",
-    "\n",
     "    return arr\n",
     "\n",
     "\n",
-    "arr_list = [5,3,2,1,7,4]\n",
-    "bub_sort(arr_list)"
+    "arr_num = [5,3,2,1,7,4]\n",
+    "arr_txt = [\"pear\",\"kiwi\",\"orange\",\"mango\",\"banana\",\"peach\",\"apple\"]\n",
+    "arr_num_sorted = bub_sort(arr_num)\n",
+    "arr_txt_sorted = bub_sort(arr_txt)\n",
+    "print(arr_num_sorted)\n",
+    "print(arr_txt_sorted)"
    ]
   }
  ],
