--- a/python/misc/sorting.ipynb
+++ b/python/misc/sorting.ipynb
@@ -33,6 +33,40 @@
     "print(arr_num_sorted)\n",
     "print(arr_txt_sorted)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 5, 4, 3, 2, 1]\n",
+      "['pear', 'peach', 'orange', 'mango', 'kiwi', 'banana', 'apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bub_sort_desc(arr: list) -> list:\n",
+    "    n = len(arr)\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        for j in range(0, n-i-1):\n",
+    "            if arr[j] < arr[j+1]:\n",
+    "                #swap them\n",
+    "                arr[j+1], arr[j] = arr[j], arr[j+1]\n",
+    "    return arr\n",
+    "\n",
+    "\n",
+    "arr_num = [5,3,2,1,7,4]\n",
+    "arr_txt = [\"pear\",\"kiwi\",\"orange\",\"mango\",\"banana\",\"peach\",\"apple\"]\n",
+    "arr_num_sorted = bub_sort_desc(arr_num)\n",
+    "arr_txt_sorted = bub_sort_desc(arr_txt)\n",
+    "print(arr_num_sorted)\n",
+    "print(arr_txt_sorted)"
+   ]
   }
  ],
  "metadata": {
