--- a/substack/articles/test_data_part_1/scratchpad.ipynb
+++ b/substack/articles/test_data_part_1/scratchpad.ipynb
@@ -45,17 +45,7 @@
     "\n",
     "parquet_sql = f\"COPY ({data_sql.format(rows=50000000)}) TO '~/test_dummy_data/duckdb/data1.parquet' (FORMAT PARQUET)\"\n",
     "\n",
-    "cn.sql(parquet_sql)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#scale it"
+    "cn.sql(parquet_sql)"
    ]
   }
  ],
